syntax = "proto3"; 

package tasks;

service TaskAnalysisService {
  rpc GetTaskStats (GetTaskStatsRequest) returns (GetTaskStatsResponse);
}

message GetTaskStatsRequest {}

message GetTaskStatsResponse {
  int32 tareas_Totales = 1;
  map<string, int32> tareas_Asignadas = 2; // Asignaciones por persona
  map<string, int32> tareas_Creadas = 3; // Creaciones por persona
}
